[package]
name = "airpod_alfred_connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
json = "0.12.4"
lazy_static = "1.4.0"
regex = "1.6.0"
mockall = "0.11.2"
clap-verbosity-flag = "1.0.1"
env_logger = "0.9.0"
log = "0.4.17"
